# D-BUG

./: .env.example  .gitignore  LICENSE  Makefile  README.md  action.yml  install.sh  pyproject.toml
dbug/: __init__.py  cli.py  config.py
dbug/agents/: __init__.py  adversarial.py  base.py  chat.py  fix_generator.py  health_scorer.py  reporter.py  root_cause.py  scanner.py  self_healer.py  summarizer.py  validator.py  watcher.py
dbug/knowledge/: __init__.py  bug_patterns.py
dbug/llm/: __init__.py  base.py  cache.py  factory.py  groq_provider.py  huggingface_provider.py  ollama_provider.py
dbug/mcp_client/: __init__.py  client.py  tools.py
dbug/mcp_server/: __init__.py  server.py
dbug/orchestrator/: __init__.py  graph.py  state.py
dbug/rag/: __init__.py  chunker.py  embedder.py  parser.py  retriever.py  vectorstore.py
tests/fixtures/buggy_code/: sample_bugs.py
